# cc-orchestrator

./: .gitignore  .pre-commit-config.yaml  .ruffignore  AUTH_TEST_FIX.md  AUTH_TEST_SOLUTION.md  CC-Orchestrator Complete User Guide 📋.md  CONTRIBUTING.md  COVERAGE_STANDARDS.md  DEVELOPMENT_METHODOLOGY.md  GITHUB_PROJECT_MANAGEMENT.md  ISSUE_14_IMPLEMENTATION_SUMMARY.md  ISSUE_CONTEXT.md  Makefile  README.md  README_AUTH_TESTS.md  conftest.py  coverage.json  demo_solution.py  manage-3-claude-instances.sh  pyproject.toml  run_auth_tests.py  run_migrations.py  security_fixes_summary.md  test-profiles.yaml  test.db-shm  test_auth.sh  test_auth_only.py  test_cli.py
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml
.github/workflows/: ci.yml
docs/: sync_configuration.md
examples/: logging_usage.py  tmux_usage.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: ConnectionStatus.tsx  Dashboard.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  InstanceCard.tsx  InstanceControls.tsx  InstanceGrid.tsx  Layout.tsx  LoadingSpinner.tsx  LogBuffer.tsx  LogViewer.tsx  MobileMenu.tsx  ResourceChart.tsx  ResponsiveGrid.tsx  StatusBadge.tsx  StatusIndicator.tsx  TaskCard.tsx
frontend/src/config/: environment.ts
frontend/src/contexts/: WebSocketContext.tsx
frontend/src/hooks/: useApi.ts  useDebounce.ts  useLogSearch.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  InstanceDetail.tsx  Logs.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
frontend/src/utils/: logger.ts
frontend/src/validation/: schemas.ts
planning/: ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_LOG.md  PHASE1_COMPLETION_SUMMARY.md  PROJECT_PLAN.md  REQUIREMENTS.md  TODO.md
scripts/: run_auth_tests.sh  test-ci-local.sh  test_auth.sh
src/cc_orchestrator/: __init__.py
src/cc_orchestrator/cli/: __init__.py  config.py  health.py  instances.py  main.py  tasks.py  tmux.py  utils.py  web.py  worktrees.py
src/cc_orchestrator/config/: __init__.py  loader.py
src/cc_orchestrator/core/: __init__.py  enums.py  git_operations.py  instance.py  (+4 more)
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_cli_database_integration.py  test_cli_workflows.py  test_cli_worktrees_integration.py  test_database_integration.py  test_end_to_end.py  test_health_integration.py  test_instance_persistence_integration.py  test_logging_simple.py  test_process_integration.py  test_security_scenarios.py  test_tmux_integration.py  test_web_api_integration.py  test_web_integration.py
tests/unit/: test_alerts_router.py  test_api_router_comprehensive.py  test_api_router_focused.py  test_cli.py  test_cli.py.old  test_cli_config_comprehensive.py  test_cli_instances_comprehensive.py  test_cli_instances_coverage.py  test_cli_main_comprehensive.py  test_cli_main_coverage.py  test_cli_tmux_coverage.py  test_cli_utils.py  test_cli_utils_comprehensive.py  test_cli_worktrees.py  test_component_logging.py  test_config_enhancements.py  test_config_router.py  test_core_git_operations_coverage.py  test_coverage_boost_imports.py  test_crud_adapter.py  test_crud_operations_comprehensive.py  test_database_crud.py  test_database_models.py  test_database_models_comprehensive.py  test_database_schema.py  test_error_handling.py  test_error_recovery_fixes.py  test_exceptions.py  test_exceptions_comprehensive.py  test_exceptions_focused.py  test_git_operations.py  test_git_operations_comprehensive.py  test_health_alerts.py  test_health_checker.py  test_health_config.py  test_health_monitor.py  test_health_recovery.py  test_health_router.py  test_instance.py  test_instances_router.py  (+57 more)
tests/web/: __init__.py  test_dependencies.py  test_server.py  test_web_api.py  test_websocket_manager.py  test_websocket_router.py  test_websocket_router_functional.py
(+96 files in other folders)
